WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236305
ImageBuffer::get/putPixelBuffer should not go through DisplayList
https://bugs.webkit.org/show_bug.cgi?id=236305
Summary
ImageBuffer::get/putPixelBuffer should not go through DisplayList
Kimmo Kinnunen
Reported
2022-02-08 08:31:04 PST
ImageBuffer::get/putPixelBuffer should not go through DisplayList
Attachments
Patch
(51.24 KB, patch)
2022-02-08 08:59 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-08 08:59:20 PST
Created
attachment 451256
[details]
Patch
Sam Weinig
Comment 2
2022-02-08 10:06:29 PST
Comment on
attachment 451256
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=451256&action=review
> Source/WebCore/ChangeLog:9 > + Remove GetPixelBuffer / PutPixelBuffer from display list implementation. > + Display lists are about GraphicsContext commands.
Awesome!
Geoffrey Garen
Comment 3
2022-02-08 10:16:29 PST
Comment on
attachment 451256
[details]
Patch r=me Any way to add a test for the inverted references case?
Kimmo Kinnunen
Comment 4
2022-02-08 11:05:13 PST
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 451256
[details]
> Patch > > r=me > > Any way to add a test for the inverted references case?
Currently there's no such things, as read and write references are not tracked in that way. I'm working on adding these after
https://bugs.webkit.org/show_bug.cgi?id=236099
Radar WebKit Bug Importer
Comment 5
2022-02-09 22:10:39 PST
<
rdar://problem/88735790
>
EWS
Comment 6
2022-02-10 14:50:13 PST
Committed
r289580
(
247097@main
): <
https://commits.webkit.org/247097@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451256
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug