Cherry-pick fd2ea6d467ea169b7dac03b86d602dcea517f129. rdar://91082903

ImageBuffer::get/putPixelBuffer should not go through DisplayList
    https://bugs.webkit.org/show_bug.cgi?id=236305

    Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-10
    Reviewed by Geoffrey Garen.

    Source/WebCore:

    Remove GetPixelBuffer / PutPixelBuffer from display list implementation.
    Display lists are about GraphicsContext commands.
    GetPixelBuffer and PutPixelBuffer are ImageBuffer operations.
    Especially GetPixelBuffer does not make sense as a display list item,
    and in its current form it does not have parameters to propagate the information
    other than to a global variables, like the WebKit side GPUP implementation does.
    It is undefined what would two GetPixelBuffer commands one after another mean
    in a display list.

    The operations in the wrong layer make the correct implementation harder than
    neccessary. In this case, GetPixelBuffer is a read operation, but in current
    implementation it was invoked by Flush, e.g. GetPixelBuffer would be inside
    a section of commands being flushed. Flush is a write operation. As such
    it would create a get of unflushed content.

    * platform/graphics/displaylists/DisplayList.cpp:
    (WebCore::DisplayList::DisplayList::append):
    * platform/graphics/displaylists/DisplayListItemBuffer.cpp:
    (WebCore::DisplayList::ItemHandle::apply):
    (WebCore::DisplayList::ItemHandle::destroy):
    (WebCore::DisplayList::ItemHandle::safeCopy const):
    * platform/graphics/displaylists/DisplayListItemType.cpp:
    (WebCore::DisplayList::sizeOfItemInBytes):
    (WebCore::DisplayList::isDrawingItem):
    (WebCore::DisplayList::isInlineItem):
    * platform/graphics/displaylists/DisplayListItemType.h:
    * platform/graphics/displaylists/DisplayListItems.cpp:
    (WebCore::DisplayList::operator<<):
    * platform/graphics/displaylists/DisplayListItems.h:
    * platform/graphics/displaylists/DisplayListRecorder.h:
    * platform/graphics/displaylists/DisplayListRecorderImpl.cpp:
    * platform/graphics/displaylists/DisplayListRecorderImpl.h:

    Source/WebKit:

    Move code that carries out RemoteImageBufferProxy GetPixelBuffer, PutPixelBuffer
    from the display list playback to RemoteImageBuffer implementation
    in RemoteRenderingBackend, the same place that hosts other
    RemoteImageBuffer function invocations.

    This makes it possible in the future to mark GetPixelBuffer as a read operation
    depending on the previous write operations. Previously GetPixelBuffer was recorded
    to the display list before the display list was flushed, which is semantically wrong
    and in practice would cause inverted references.

    Simplify the protocol to implement the GetPixelBuffer. Previously it was:
    - If GPUP does not have the semaphore and the shm, ask for GPUP to send them,  sync
    - Else if GPUP does not have the semaphore, ask for GPUP to send it, sync
    - Else if GPUP does not have the shm send, ask for GPUP to send it, sync
    - Send the GetPixelBuffer message via stream async
    - Wait for the semaphore

    After it is:
    - If GPUP does not have the shm send GetPixelBuffer with the shm, sync
    - Else send the GetPixelBuffer via stream sync

    There's no point in sending a semaphore, the stream sync message is
    just a wait on the stream semaphore. Also, since semaphores
    might have spurious wakeups, it is not enough of a protocol to wait a
    plain semaphore.

    * GPUProcess/graphics/RemoteDisplayListRecorder.cpp:
    * GPUProcess/graphics/RemoteDisplayListRecorder.h:
    * GPUProcess/graphics/RemoteDisplayListRecorder.messages.in:
    * GPUProcess/graphics/RemoteRenderingBackend.cpp:
    (WebKit::RemoteRenderingBackend::getPixelBufferForImageBuffer):
    (WebKit::RemoteRenderingBackend::getPixelBufferForImageBufferWithNewMemory):
    (WebKit::RemoteRenderingBackend::putPixelBufferForImageBuffer):
    * GPUProcess/graphics/RemoteRenderingBackend.h:
    * GPUProcess/graphics/RemoteRenderingBackend.messages.in:
    * WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
    * WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h:
    * WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
    (WebKit::RemoteRenderingBackendProxy::gpuProcessConnectionDidClose):
    (WebKit::RemoteRenderingBackendProxy::getPixelBufferForImageBuffer):
    (WebKit::RemoteRenderingBackendProxy::putPixelBufferForImageBuffer):
    (WebKit::RemoteRenderingBackendProxy::updateSharedMemoryForGetPixelBuffer):
    (WebKit::RemoteRenderingBackendProxy::destroyGetPixelBufferSharedMemory):
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

    Canonical link: https://commits.webkit.org/247097@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289580 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.664@safari-613-branch